--- a/Article/article.tex
+++ b/Article/article.tex
@@ -17,7 +17,7 @@
 \captionsetup{compatibility=false}
 \usepackage{todonotes}
 \usepackage{subfig}
-
+\usepackage{multirow}
 
 \usepackage[shortlabels]{enumitem}
 
@@ -400,23 +400,32 @@ In Algorithm~\ref{alg:OrderOfExecutionInfinteMemory}, compute intensive tasks (s
 	\item $decreasing_order_of_communication_plus_computation_strategy$: Order is obtained by sorting all tasks in non-increasing order of sum of communication and computation times.
 	
 \end{itemize}
-\todo[inline]{SKumar: equivalent tikz figure}
-\begin{tabular}{|l|l|l|}
-\hline
-Task & Comm Time & Comp Time\\ \hline
-A & 3 & 2\\ \hline
-B & 1 & 3\\ \hline
-C & 4 & 4\\ \hline
-D & 2 & 1\\ \hline
-\end{tabular}
+\todo[inline]{SKumar: update short name of each strategy in tikz}
+	\begin{table}[htb]
+	\begin{center}
+	
+		\begin{tabular}{|c|c|c|}
+		\hline
+		\multirow{2}{*}{Task} & Comm Time & \multirow{2}{*}{Comp Time}\\ 
+		&=Comm Volume& \\ \hline
+		A & 3 & 2\\ \hline
+		B & 1 & 3\\ \hline
+		C & 4 & 4\\ \hline
+		D & 2 & 1\\ \hline
+		\end{tabular}
+	\caption{\label{tab:staticOrderExample} A task set for static order schedules.}
+	\end{center}
+	\end{table}
+
 	\begin{figure}[htb]
 	\centering
 %% 	\subfloat[Optimal schedule]{
-		\begin{tikzpicture}[decoration={brace, amplitude=5},scale=0.5, every node/.style={scale=0.5}]
+		\begin{tikzpicture}[decoration={brace, amplitude=5},scale=0.6, every node/.style={scale=0.6}]
 		\tikzstyle{legend}=[below=0.1, anchor=mid] 	
 		\node(t1) at (0,0) {};   
 		
-	    \node[above right=0.4cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=9cm, draw=white, fill=white, scale=1.5](IMC) {$Infinite Memory Capacity$}; 	    		
+	    \node[above right=0.6cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=9cm, draw=white, fill=white, scale=1.5](IMC) {$Infinite Memory Capacity$}; 	    				
+%%	    \node[above right=0.4cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=9cm, draw=white, fill=white, scale=1.5](IMC) {$Infinite Memory Capacity$}; 	    		
 		    		
 		\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b11) {$B$};
 		
@@ -459,7 +468,8 @@ D & 2 & 1\\ \hline
  
  		\node(t1) at ([shift={(0, -3.8)}] t1.mid) {};   
 %%	    \node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=9cm, draw=white, fill=white, scale=1.5](MC) {$Memory Capacity=6$}; 
-	    \node[above right=0.4cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=9cm, draw=white, fill=white, scale=1.5](IMC) {$Memory Capacity=6$};	    
+%%	    \node[above right=0.4cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=9cm, draw=white, fill=white, scale=1.5](IMC) {$Memory Capacity=6$};	   
+	    \node[above right=0.6cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=9cm, draw=white, fill=white, scale=1.5](IMC) {$Memory Capacity=6$};	     
 
 	    
 	    
@@ -649,36 +659,18 @@ D & 2 & 1\\ \hline
 %%		\path (-0.1, -0.5) -- (1.5, -0.5);
 		
 		\end{tikzpicture}
-%%	} %\hspace{0.01\textwidth} %\hfill% or \hspace{5mm} or \hspace{0.3\textwidth}
-%%	\subfloat[HP schedule]{
-%%		\begin{tikzpicture}[decoration={brace, amplitude=5},scale=1.8, every node/.style={scale=1.8}]
-%%		\node(t1) at (0,0) {};      		
-%%		
-%%		\node[above right=0cm and 0cm of t1.mid, draw, minimum height=0.5cm, minimum width=0.618cm,draw,fill=white](t2) {$Y$};
-%%		
-%%		\node[above right=0.5cm and 0cm of t2.north west, draw, minimum height=0.5cm, minimum width=1.618cm,draw,fill=white](t3) {$X$};								
-%%		
-%%		\tikzstyle{legend}=[below=0.35, anchor=mid] 	
-%%		\draw[->] (-0.1, -0.1) -- (0, -0.1)  node[legend,scale=0.65]{$0$} --(0.618,-0.1) node [legend,scale=0.65]{$\tfrac{1}{\phi}$} --(1.618,-0.1) node [legend,scale=0.65]{$\phi$} --(2, -0.1) node[right,scale=0.65]{$t$}; 
-%%		
-%%		\foreach \x in {0cm, 0.618cm, 1.618cm} \draw (\x, -0.12) -- (\x, -0.08);
-%%		%%			To align both figures of subfloat -- an object without drawing at the same depth
-%%		
-%%		\path (-0.1, -0.5) -- (2, -0.5);
-%%		
-%%		\end{tikzpicture}
-%%	} 
-	\caption{ \label{fig:staticSchedules} Static.}
+
+	\caption{ \label{fig:staticOrderExample} Different static order heuristic schedules for Table~\ref{tab:staticOrderExample}.}
 \end{figure}
 
-\begin{figure}[htb]
-	
-	\includegraphics[scale=0.05]{Figs/staticOrderSchedules}
-			\caption{Task set and schedules where orders are precomputed based on different heuristics.}
-	\label{fig:staticOrderExample}
-\end{figure}
+%%\begin{figure}[htb]
+%%	
+%%	\includegraphics[scale=0.05]{Figs/staticOrderSchedules}
+%%			\caption{Task set and schedules where orders are precomputed based on different heuristics.}
+%%	\label{fig:staticOrderExample}
+%%\end{figure}
 
-Fig~\ref{fig:staticOrderExample} shows schedules for all proposed heuristics of this class for task set of Table (ref).
+Fig~\ref{fig:staticOrderExample} shows schedules for all proposed heuristics of this class for task set of Table~\ref{tab:staticOrderExample}.
 \subsection{Dynamic Selection}
 %%%%string alg_name="largest_communication_task_respects_memory_restriction";
 %%%%string alg_name="smallest_communication_task_respects_memory_restriction";
@@ -692,16 +684,146 @@ In this class of strategy, when communication channel is idle, a task is chosen 
 	\item $maximum_accelerated_task_respects_memory_restriction$:  We select a set of tasks which induce minimum idle time on compute channel. A task with the maximum ratio of compute time to communication time  is chosen from this set.  Memory requirement of this task should not  be more than presently available memory.
 	
 \end{itemize}
-\todo[inline]{SKumar: equivalent tikz figure}
+%%\todo[inline]{SKumar: equivalent tikz figure}
+	\begin{table}[htb]
+	\begin{center}
+		
+		\begin{tabular}{|c|c|c|}
+			\hline
+			\multirow{2}{*}{Task} & Comm Time & \multirow{2}{*}{Comp Time}\\ 
+			&=Comm Volume& \\ \hline
+			A & 3 & 2\\ \hline
+			B & 1 & 6\\ \hline
+			C & 4 & 6\\ \hline
+			D & 5 & 1\\ \hline
+		\end{tabular}
+		\caption{\label{tab:dynamicSelectionExample} A task set for dynamic schedules.}
+	\end{center}
+\end{table}
 
 \begin{figure}[htb]
+	\centering
+	%% 	\subfloat[Optimal schedule]{
+	\begin{tikzpicture}[decoration={brace, amplitude=5},scale=0.6, every node/.style={scale=0.6}]
+	\tikzstyle{legend}=[below=0.1, anchor=mid] 	
+	\node(t1) at (0,0) {};  
+	\node[above right=0.6cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=15cm, draw=white, fill=white, scale=1.5](IMC) {$Memory Capacity=6$};	     
+	
+	\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b11) {$B$};          
+	
+	\node[below right=0cm and 0cm of b11.south east, minimum height=0.5cm, minimum width=6cm,draw,fill=white](b12) {$B$};			
+	
+	\node[above right=0cm and 0cm of b11.south east, minimum height=0.5cm, minimum width=5cm,draw,fill=white](d11) {$D$};
+	
+	\node[below right=0cm and 0cm of b12.north east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d12) {$D$};		
+	
+	\node[above right=0cm and 0cm of d12.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a11) {$A$};
+	
+	\node[below right=0cm and 0cm of a11.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a12) {$A$};
+	
+	\node[above right=0cm and 0cm of a12.north east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c11) {$C$};
+	
+	\node[below right=0cm and 0cm of c11.south east, minimum height=0.5cm, minimum width=6cm,draw,fill=white](c12) {$C$};	
+	
+	
+	\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+	-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.65]{$0$}
+	-- ([shift={(1, -0.65)}] t1.mid)node[legend,scale=0.65]{$1$}
+	-- ([shift={(6, -0.65)}] t1.mid)node[legend,scale=0.65]{$6$}
+	-- ([shift={(7, -0.65)}] t1.mid)node[legend,scale=0.65]{$7$}
+	-- ([shift={(8, -0.65)}] t1.mid)node[legend,scale=0.65]{$8$}
+	-- ([shift={(11, -0.65)}] t1.mid)node[legend,scale=0.65]{$11$}         
+	-- ([shift={(13, -0.65)}] t1.mid)node[legend,scale=0.65]{$13$}                                      
+	-- ([shift={(17, -0.65)}] t1.mid)node[legend,scale=0.65]{$17$}
+	-- ([shift={(23, -0.65)}] t1.mid)node[legend,scale=0.65]{$23$}
+	-- ([shift={(25.1, -0.65)}] t1.mid)node[right,scale=0.65]{$t$};
+	
+	\foreach \x in {0, 1, 6, 7, 8, 11, 13, 17, 23} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+	
+	\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$BDAC$};
+	
+	%% schedule of third heuristic		
+	\node(t1) at ([shift={(0, -1.8)}] t1.mid) {};                		
+	\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b21) {$B$};          
 
-\includegraphics[scale=0.05]{Figs/dynamiSelectionSchedules}
-\caption{Task set and schedules where orders are precomputed based on different heuristics.}
-\label{fig:dynamicSelectionExample}
-\end{figure}
+	\node[below right=0cm and 0cm of b21.south east, minimum height=0.5cm, minimum width=6cm,draw,fill=white](b22) {$B$};			
+	
+	\node[above right=0cm and 0cm of b21.south east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a21) {$A$};
+	
+	\node[below right=0cm and 0cm of b22.north east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a22) {$A$};		
+	
+	\node[above right=0cm and 0cm of a22.north east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c21) {$C$};
+	
+	\node[below right=0cm and 0cm of c21.south east, minimum height=0.5cm, minimum width=6cm,draw,fill=white](c22) {$C$};
+	
+	\node[above right=0cm and 0cm of c22.north east, minimum height=0.5cm, minimum width=5cm,draw,fill=white](d21) {$D$};
+	
+	\node[below right=0cm and 0cm of d21.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d22) {$D$};	
+	
+		
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.65]{$0$}
+		-- ([shift={(1, -0.65)}] t1.mid)node[legend,scale=0.65]{$1$}
+		-- ([shift={(4, -0.65)}] t1.mid)node[legend,scale=0.65]{$4$}
+		-- ([shift={(7, -0.65)}] t1.mid)node[legend,scale=0.65]{$7$}
+		-- ([shift={(9, -0.65)}] t1.mid)node[legend,scale=0.65]{$9$}
+		-- ([shift={(13, -0.65)}] t1.mid)node[legend,scale=0.65]{$13$}         
+		-- ([shift={(19, -0.65)}] t1.mid)node[legend,scale=0.65]{$19$}                                      
+		-- ([shift={(24, -0.65)}] t1.mid)node[legend,scale=0.65]{$24$}
+		-- ([shift={(25, -0.65)}] t1.mid)node[legend,scale=0.65]{$25$}
+		-- ([shift={(25.1, -0.65)}] t1.mid)node[right,scale=0.65]{$t$};
+		
+	\foreach \x in {0, 1, 4, 7, 9, 13, 19, 24, 25} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+	
+	\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$BACD$};
+	
+	%% schedule of third heuristic		
+	\node(t1) at ([shift={(0, -1.8)}] t1.mid) {};    	
+	\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b31) {$B$};          
+	
+	\node[below right=0cm and 0cm of b31.south east, minimum height=0.5cm, minimum width=6cm,draw,fill=white](b32) {$B$};			
+	
+	\node[above right=0cm and 0cm of b31.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c31) {$C$};
+	
+	\node[below right=0cm and 0cm of b32.north east, minimum height=0.5cm, minimum width=6cm,draw,fill=white](c32) {$C$};		
+	
+	\node[above right=0cm and 0cm of c32.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a31) {$A$};
+	
+	\node[below right=0cm and 0cm of a31.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a32) {$A$};
+	
+	\node[above right=0cm and 0cm of a32.north east, minimum height=0.5cm, minimum width=5cm,draw,fill=white](d31) {$D$};
+	
+	\node[below right=0cm and 0cm of d31.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d32) {$D$};	
+	
+		
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.65]{$0$}
+		-- ([shift={(1, -0.65)}] t1.mid)node[legend,scale=0.65]{$1$}
+		-- ([shift={(5, -0.65)}] t1.mid)node[legend,scale=0.65]{$5$}
+		-- ([shift={(7, -0.65)}] t1.mid)node[legend,scale=0.65]{$7$}
+		-- ([shift={(13, -0.65)}] t1.mid)node[legend,scale=0.65]{$13$}
+		-- ([shift={(16, -0.65)}] t1.mid)node[legend,scale=0.65]{$16$}         
+		-- ([shift={(18, -0.65)}] t1.mid)node[legend,scale=0.65]{$18$}                                      
+		-- ([shift={(23, -0.65)}] t1.mid)node[legend,scale=0.65]{$23$}
+		-- ([shift={(24, -0.65)}] t1.mid)node[legend,scale=0.65]{$24$}
+		-- ([shift={(25.1, -0.65)}] t1.mid)node[right,scale=0.65]{$t$};
+		
+	\foreach \x in {0, 1, 5, 7, 13, 16, 18, 23, 24} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+	
+	\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$BCAD$};
 
-Fig~\ref{fig:dynamicSelectionExample} shows schedules for all proposed heuristics of this class for task set of Table (ref).
+	\end{tikzpicture}
+		\caption{ \label{fig:dynamicSelectionExample} Different dynamic heuristic schedules for a task set of Table~\ref{tab:dynamicSelectionExample}.}
+	\end{figure} 
+
+%%\begin{figure}[htb]
+%%
+%%\includegraphics[scale=0.05]{Figs/dynamiSelectionSchedules}
+%%\caption{Task set and schedules where orders are precomputed based on different heuristics.}
+%%\label{fig:dynamicSelectionExample}
+%%\end{figure}
+
+Fig~\ref{fig:dynamicSelectionExample} shows schedules for all proposed heuristics of this class for task set of Table~\ref{tab:dynamicSelectionExample}.
 
 \subsection{Static Order with dynamic Corrections}
 
@@ -718,13 +840,165 @@ Initial order is obtained by infinity memory heuristic. When communication chann
 	\item $optimal_order_infinite_memory_maximum_accelerated_task_respects_memory_restriction$: A task,  whose ratio of compute time to communication time is maximum, is chosen from the set .
 \end{itemize}
 
+	\begin{table}[htb]
+	\begin{center}
+		
+		\begin{tabular}{|c|c|c|}
+			\hline
+			\multirow{2}{*}{Task} & Comm Time & \multirow{2}{*}{Comp Time}\\ 
+			&=Comm Volume& \\ \hline
+			A & 4 & 1\\ \hline
+			B & 2 & 6\\ \hline
+			C & 8 & 8\\ \hline
+			D & 5 & 4\\ \hline
+			E & 3 & 2\\ \hline
+		\end{tabular}
+		\caption{\label{tab:staticOrderDynamicCorrectionsExample} A task set for static order dynamic corrections schedules.}
+	\end{center}
+\end{table}
 
-\todo[inline]{SKumar: equivalent tikz figure}
 \begin{figure}[htb]
-\includegraphics[scale=0.05]{Figs/staticOrderDynamicCorrectionsSchedules}
-\caption{Task set and schedules where orders are precomputed based on different heuristics.}
-\label{fig:staticOrderDynamicCorrectionsExample}
-\end{figure}
+	\centering
+	%% 	\subfloat[Optimal schedule]{
+	\begin{tikzpicture}[decoration={brace, amplitude=5},scale=0.3, every node/.style={scale=0.3}]
+	\tikzstyle{legend}=[below=0.1, anchor=mid] 	
+	\node(t1) at (0,0) {};  
+	\node[above right=1.2cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=20cm, draw=white, fill=white, scale=1.5](MC) {Optimal Order with Infinite Memory = $BCDAE$};
+	\node[above right=0.6cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=20cm, draw=white, fill=white, scale=1.5](MC) {$Memory Capacity=9$};	     
+	
+	\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=2cm,draw,fill=white](b11) {$B$};          
+	
+	\node[below right=0cm and 0cm of b11.south east, minimum height=0.5cm, minimum width=6cm,draw,fill=white](b12) {$B$};			
+	
+	\node[above right=0cm and 0cm of b11.south east, minimum height=0.5cm, minimum width=5cm,draw,fill=white](d11) {$D$};
+	
+	\node[below right=0cm and 0cm of b12.north east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](d12) {$D$};		
+	
+	\node[above right=0cm and 0cm of b12.north east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](a11) {$A$};
+	
+	\node[below right=0cm and 0cm of a11.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](a12) {$A$};
+
+	\node[above right=0cm and 0cm of d12.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](e11) {$E$};
+
+	\node[below right=0cm and 0cm of e11.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](e12) {$E$};		
+	
+	\node[above right=0cm and 0cm of e12.north east, minimum height=0.5cm, minimum width=8cm,draw,fill=white](c11) {$C$};
+	
+	\node[below right=0cm and 0cm of c11.south east, minimum height=0.5cm, minimum width=8cm,draw,fill=white](c12) {$C$};	
+	
+	
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.65]{$0$}
+		-- ([shift={(2, -0.65)}] t1.mid)node[legend,scale=0.65]{$2$}
+		-- ([shift={(7, -0.65)}] t1.mid)node[legend,scale=0.65]{$7$}
+		-- ([shift={(8, -0.65)}] t1.mid)node[legend,scale=0.65]{$8$}
+		-- ([shift={(12, -0.65)}] t1.mid)node[legend,scale=0.65]{$12$}
+		-- ([shift={(13, -0.65)}] t1.mid)node[legend,scale=0.65]{$13$}         
+		-- ([shift={(15, -0.65)}] t1.mid)node[legend,scale=0.65]{$15$}                                      
+		-- ([shift={(17, -0.65)}] t1.mid)node[legend,scale=0.65]{$17$}
+		-- ([shift={(25, -0.65)}] t1.mid)node[legend,scale=0.65]{$25$}
+		-- ([shift={(33, -0.65)}] t1.mid)node[legend,scale=0.65]{$33$}
+		-- ([shift={(33.1, -0.65)}] t1.mid)node[right,scale=0.65]{$t$};
+		
+	\foreach \x in {0, 2, 7, 8, 12, 13, 15, 17, 25, 33} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+	
+	\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$BDAEC$};
+	
+	%% schedule of second heuristic		
+	\node(t1) at ([shift={(0, -1.8)}] t1.mid) {};                		
+
+	\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=2cm,draw,fill=white](b21) {$B$};          
+
+	\node[below right=0cm and 0cm of b21.south east, minimum height=0.5cm, minimum width=6cm,draw,fill=white](b22) {$B$};			
+	
+	\node[above right=0cm and 0cm of b21.south east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](e21) {$E$};
+	
+	\node[below right=0cm and 0cm of b22.north east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](e22) {$E$};		
+	
+	\node[above right=0cm and 0cm of e21.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](a21) {$A$};
+	
+	\node[below right=0cm and 0cm of e22.north east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](a22) {$A$};
+	
+	\node[above right=0cm and 0cm of a21.south east, minimum height=0.5cm, minimum width=5cm,draw,fill=white](d21) {$D$};
+	
+	\node[below right=0cm and 0cm of d21.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](d22) {$D$};		
+	
+	\node[above right=0cm and 0cm of d22.north east, minimum height=0.5cm, minimum width=8cm,draw,fill=white](c21) {$C$};
+	
+	\node[below right=0cm and 0cm of c21.south east, minimum height=0.5cm, minimum width=8cm,draw,fill=white](c22) {$C$};	
+	
+	
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.65]{$0$}
+		-- ([shift={(2, -0.65)}] t1.mid)node[legend,scale=0.65]{$2$}
+		-- ([shift={(5, -0.65)}] t1.mid)node[legend,scale=0.65]{$5$}
+		-- ([shift={(8, -0.65)}] t1.mid)node[legend,scale=0.65]{$8$}
+		-- ([shift={(9, -0.65)}] t1.mid)node[legend,scale=0.65]{$9$}
+		-- ([shift={(10, -0.65)}] t1.mid)node[legend,scale=0.65]{$10$}
+		-- ([shift={(11, -0.65)}] t1.mid)node[legend,scale=0.65]{$11$}         
+		-- ([shift={(14, -0.65)}] t1.mid)node[legend,scale=0.65]{$14$}                                      
+		-- ([shift={(18, -0.65)}] t1.mid)node[legend,scale=0.65]{$18$}
+		-- ([shift={(26, -0.65)}] t1.mid)node[legend,scale=0.65]{$26$}
+		-- ([shift={(34, -0.65)}] t1.mid)node[legend,scale=0.65]{$34$}
+		-- ([shift={(34.1, -0.65)}] t1.mid)node[right,scale=0.65]{$t$};
+	
+	\foreach \x in {0, 2, 5, 8, 9, 10, 11, 14, 18, 26, 34} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+	
+	\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$BEADC$};
+	
+	%% schedule of third heuristic		
+	\node(t1) at ([shift={(0, -1.8)}] t1.mid) {};
+
+	\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=2cm,draw,fill=white](b31) {$B$};          
+
+	\node[below right=0cm and 0cm of b31.south east, minimum height=0.5cm, minimum width=6cm,draw,fill=white](b32) {$B$};			
+	
+	\node[above right=0cm and 0cm of b31.south east, minimum height=0.5cm, minimum width=5cm,draw,fill=white](d31) {$D$};
+	
+	\node[below right=0cm and 0cm of b32.north east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](d32) {$D$};		
+	
+	\node[above right=0cm and 0cm of b32.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](e31) {$E$};
+	
+	\node[below right=0cm and 0cm of d32.north east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](e32) {$E$};
+	
+	\node[above right=0cm and 0cm of d32.north east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](a31) {$A$};
+	
+	\node[below right=0cm and 0cm of a31.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](a32) {$A$};		
+	
+	\node[above right=0cm and 0cm of a32.north east, minimum height=0.5cm, minimum width=8cm,draw,fill=white](c31) {$C$};
+	
+	\node[below right=0cm and 0cm of c31.south east, minimum height=0.5cm, minimum width=8cm,draw,fill=white](c32) {$C$};	
+		
+		
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.65]{$0$}
+		-- ([shift={(2, -0.65)}] t1.mid)node[legend,scale=0.65]{$2$}
+		-- ([shift={(7, -0.65)}] t1.mid)node[legend,scale=0.65]{$7$}
+		-- ([shift={(8, -0.65)}] t1.mid)node[legend,scale=0.65]{$8$}
+		-- ([shift={(11, -0.65)}] t1.mid)node[legend,scale=0.65]{$11$}
+		-- ([shift={(12, -0.65)}] t1.mid)node[legend,scale=0.65]{$12$}         
+		-- ([shift={(14, -0.65)}] t1.mid)node[legend,scale=0.65]{$14$}                                      
+		-- ([shift={(16, -0.65)}] t1.mid)node[legend,scale=0.65]{$16$}
+		-- ([shift={(17, -0.65)}] t1.mid)node[legend,scale=0.65]{$17$}
+		-- ([shift={(25, -0.65)}] t1.mid)node[legend,scale=0.65]{$25$}
+		-- ([shift={(33, -0.65)}] t1.mid)node[legend,scale=0.65]{$33$}
+		-- ([shift={(33.1, -0.65)}] t1.mid)node[right,scale=0.65]{$t$};
+	
+	\foreach \x in {0, 2, 7, 8, 11, 12, 14, 16, 17, 25, 33} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+	
+	\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$BDEAC$};
+	
+		
+	\end{tikzpicture}
+	\caption{ \label{fig:staticOrderDynamicCorrectionsExample} Different static order dynamic corrections heuristic schedules for a task set of Table~\ref{tab:staticOrderDynamicCorrectionsExample}.}
+\end{figure} 
+
+
+%%\begin{figure}[htb]
+%%\includegraphics[scale=0.05]{Figs/staticOrderDynamicCorrectionsSchedules}
+%%\caption{Task set and schedules where orders are precomputed based on different heuristics.}
+%%\label{fig:staticOrderDynamicCorrectionsExample}
+%%\end{figure}
 
 Fig~\ref{fig:staticOrderDynamicCorrectionsExample} shows schedules for all proposed heuristics of this class for task set of Table (ref).
 
